--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./profile.jpeg" height="200" alt="Photo of Muhammed Sadik">
     <h2>Summary</h2>
     <ul>
-        <p>I try my maximum for great output. That is my plus point.</p>
+        <p>I try my maximum for great output.</p>
     </ul>
     
     <hr>
