--- a/My Hobbies.html
+++ b/My Hobbies.html
@@ -4,16 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: white;
+            margin: 0;
+            padding: 20px;
+            padding-right: 25%;
+            padding-left: 25%;
+            text-align: center;
+        }
+        .top-left-button {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    padding: 10px 20px;
+    background-color: #f0f8ff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.top-left-button:hover {
+    background-color: white;
+}
+
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background-color: #021a1d;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            font-size: 18px;
+        }
+
+        li:nth-child(even) {
+            background-color: #021d20;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
+    <button class="top-left-button"><a href="./index.html">Home</a></button>
     <h1>My Hobbies</h1>
     <ul>
         <li>Hang With Friends</li>
         <li>Play Football</li>
-        <li>Coocking</li>
+        <li>Cooking</li>
         <li>Watch Movies</li>
         <li>I like travelling</li>
     </ul>
-    
+
+
+    <script src="path/to/your/custom.js"></script>
 </body>
 </html>
